<resources>
    <string name="app_name">AppTaekwondoMonitoring</string>
    <string name="monitoring">Monitoramento</string>
    <string name="kick_monitorings">Chutes Monitorados</string>
    <string name="new_monitoring">Novo Monitoramento</string>
    <string name="start_monitoring">Iniciar Monitoramento</string>
    <string name="list_monitorings">Monitoramentos</string>
    <string name="connect_module">Conectar</string>
    <string name="disconnect_module">Desconectar</string>
    <string name="bluetooth_devices">Dispositivos Bluetooth</string>
    <string name="impact_module">Módulo Impacto</string>
    <string name="wearable_module">Módulo Vestível</string>
    <string name="start_kick_collection">Coletar dados do Chute</string>
    <string name="stop_kick_collection">Parar coleta de dados do Chute</string>
    <string name="kick_discard">Descartar Chute</string>
    <string name="kick_save">Salvar Chute</string>
    <string name="name_athlete">Nome do Atleta</string>
    <string name="weight_athlete">Peso do Atleta</string>
    <string name="height_athlete">Altura do Atleta</string>
    <string name="category_athlete">Categoria do Atleta</string>
    <string name="home_menu">Menu Inicial</string>
    <string name="details">Detalhes</string>
    <string name="impact_values">Impacto (Máx) (m/s²)</string>
    <string name="accel_values">Aceleração (Máx) (m/s²)</string>
    <string name="velocity_values">Velocidade (Máx) (m/s)</string>
    <string name="athlete_two_points">Atleta:</string>
    <string name="athlete">Atleta</string>
    <string name="kick">Chute:</string>
    <string name="max_values">Valores máximos atingidos</string>
    <string name="date">Data:</string>
    <string name="resume_monitoring">Resumo Monitoramento</string>
    <string name="resume">Resumo</string>
    <string name="code_data">Código | Data</string>
    <string name="kicks">Chutes</string>
    <string name="connection_bluetooth">Conexão Bluetooth</string>
    <string name="speed_calculation">Cálculo da Velocidade (m/s²)</string>
    <string name="connected">Conectado</string>
    <string name="start_time">Tempo Inicial</string>
    <string name="end_time">Tempo Final</string>
    <string name="calculate">Calcular</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="x_two_points">X:</string>
    <string name="y_two_points">Y:</string>
    <string name="z_two_points">Z:</string>
    <string name="result">Resultado</string>
    <string name="zero">0</string>
    <string name="meters_per_second">(m/s²)</string>
    <string name="accel_meters_per_second">Aceleração (m/s²)</string>
    <string name="speed_meters_per_second">Velocidade (m/s)</string>
    <string name="time_second">Tempo (s)</string>
    <string name="birth_date_athlete">Data Nascimento</string>
    <string name="training_time_athlete">Tempo de Treinamento</string>
    <string name="recalculate_speed">Recalcular Velocidade</string>
    <string name="recalculate">Recalcular</string>
    <string name="save">Salvar</string>
    <string name="execution_time">Tempo Execução (s)</string>
</resources>
