<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/connection_bluetooth"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wearable_module"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/img_result_connected_wearable_module"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:padding="35dp"
                    android:src="@drawable/ic_bluetooth_disconnected_red_64dp" />

                <ProgressBar
                    android:id="@+id/progress_connected_wearable_module"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:padding="35dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_connect_module_wearable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_module" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/impact_module"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/img_result_connected_impact_module"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:padding="35dp"
                    android:src="@drawable/ic_bluetooth_disconnected_red_64dp" />

                <ProgressBar
                    android:id="@+id/progress_connected_impact_module"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:padding="35dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_connect_module_impact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_module" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>