<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.anychart.AnyChartView
                    android:id="@+id/chart_module_impact"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />

                <com.anychart.AnyChartView
                    android:id="@+id/chart_module_wearable"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorWhite"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/speed_calculation"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        android:weightSum="10">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="30dp"
                            android:layout_weight="5"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/start_time"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                            <EditText
                                android:id="@+id/edt_start_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_weight="5"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/end_time"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                            <EditText
                                android:id="@+id/edt_end_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:textAlignment="center"
                                android:textSize="16sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_calculate_speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="50dp"
                        android:text="@string/calculate" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/result"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        android:weightSum="15">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="30dp"
                            android:layout_weight="5"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/x"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/txt_result_x_velocity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/zero"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/y"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/txt_result_y_velocity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/zero"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_weight="5"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/z"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/txt_result_z_velocity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/zero"
                                android:textAlignment="center"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/float_transparent"
                    android:orientation="vertical"
                    android:padding="10dp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:baselineAligned="false"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_finish_monitoring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_check_check_64dp"
                app:backgroundTint="@color/colorBlue"
                app:maxImageSize="44dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_kick_collection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_play_arrow_white_44dp"
                app:maxImageSize="44dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_kick_discard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_delete_forever_white_44dp"
                app:backgroundTint="@color/colorRed"
                app:maxImageSize="44dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_kick_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_save_white_44dp"
                app:backgroundTint="@color/colorGreen"
                app:maxImageSize="40dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>